2011-07-07  Gavin Peters  <gavinp@chromium.org>

        Reviewed by Alexey Proskuryakov.

        fast/dom/HTMLLinkElement/link-and-subresource-test.html is flaky on chromium debug bots
        https://bugs.webkit.org/show_bug.cgi?id=60097

        The culprit was that CachedResource:stopLoading() was using *this
        after a call to checkNotify(), which isn't kosher.  This patch
        uses a CachedResourceHandle to keep the CachedResource alive.

        The test is a very close copy of the eponymous
        link-and-subresource-test.html, only substituting invalid
        resources for the valid ones in that test.  The reproduction is
        timing related, and happens much more consistantly with an invalid
        resource for whatever reason.

        * fast/dom/HTMLLinkElement/link-and-subresource-test-nonexistent-expected.txt: Added.
        * fast/dom/HTMLLinkElement/link-and-subresource-test-nonexistent.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2011-07-29  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][ARM]REGRESSION(r91752): It made audio related tests fail
        https://bugs.webkit.org/show_bug.cgi?id=65369

        * platform/qt-arm/Skipped: Skip failing tests.

2011-07-27  Ryosuke Niwa  <rniwa@webkit.org>

        Calling window.find immediately after mutating the document crashes WebKit.
        https://bugs.webkit.org/show_bug.cgi?id=65296

        Reviewed by Darin Adler.

        Added a test to ensure WebKit doesn't crash when searching for string after mutating the document.

        * editing/text-iterator/find-after-mutation-expected.txt: Added.
        * editing/text-iterator/find-after-mutation.html: Added.

2011-07-27  MORITA Hajime  <morrita@google.com>

        Inconsistent state of TreeScope reference.
        https://bugs.webkit.org/show_bug.cgi?id=65235

        Reviewed by Dimitri Glazkov.
