@@ -1,3 +1,13 @@
+2011-06-26  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Kent Tamura.
+
+        m_formElementsWithFormAttribute doesn't ref the objects it holds
+        https://bugs.webkit.org/show_bug.cgi?id=62956
+
+        * fast/forms/form-associated-element-crash3-expected.txt: Added.
+        * fast/forms/form-associated-element-crash3.html: Added.
+
 2011-07-07  Gavin Peters  <gavinp@chromium.org>
 
         Reviewed by Alexey Proskuryakov.
